--- a/dwba4-semana-11-PT3025616/index.html
+++ b/dwba4-semana-11-PT3025616/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Página Inicial</title>
 
     <link
@@ -26,16 +27,16 @@
   </head>
   <body>
     <header>
-      <div class="navbar">
+      <div class="barraNavegacao">
         <a href="./index.html">HOME</a>
         <a href="./src/pages/eventos/eventos.html">EVENTOS</a>
         <a href="./src/pages/contato.html">CONTATO</a>
-        <div class="dropdown">
-          <button class="dropbtn">
+        <div class="suspenso">
+          <button class="botao">
             CURSOS
             <i class="fa fa-caret-down"></i>
           </button>
-          <div class="dropdown-content">
+          <div class="suspenso-conteudo">
             <a href="./src/pages/courses/ads.html"
               >Análise e Desenvolvimento de Sistemas</a
             >
