--- a/dwba4-semana-11-PT3025616/src/pages/contato.html
+++ b/dwba4-semana-11-PT3025616/src/pages/contato.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+
     <title>Contato</title>
 
     <link rel="stylesheet" href="../styles/commom/header.css" type="text/css" />
@@ -14,16 +15,16 @@
 
   <body>
     <header>
-      <div class="navbar">
+      <div class="barraNavegacao">
         <a href="../../index.html">HOME</a>
         <a href="./eventos/eventos.html">EVENTOS</a>
         <a href="./contato.html">CONTATO</a>
-        <div class="dropdown">
-          <button class="dropbtn">
+        <div class="suspenso">
+          <button class="botao">
             CURSOS
             <i class="fa fa-caret-down"></i>
           </button>
-          <div class="dropdown-content">
+          <div class="suspenso-conteudo">
             <a href="./courses/ads.html"
               >Análise e Desenvolvimento de Sistemas</a
             >
