--- a/dwba4-semana-11-PT3025616/src/pages/sobre.html
+++ b/dwba4-semana-11-PT3025616/src/pages/sobre.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+
     <title>Sobre</title>
 
     <link rel="stylesheet" href="../styles/commom/header.css" type="text/css" />
     <link rel="stylesheet" href="../styles/commom/footer.css" type="text/css" />
-
     <link rel="stylesheet" href="../styles/pages/sobre.css" type="text/css" />
 
     <link rel="icon" href="../images/favicon_ifsp.ico" />
@@ -23,16 +23,16 @@
 
   <body>
     <header>
-      <div class="navbar">
+      <div class="barraNavegacao">
         <a href="../../index.html">HOME</a>
         <a href="./eventos/eventos.html">EVENTOS</a>
         <a href="./contato.html">CONTATO</a>
-        <div class="dropdown">
-          <button class="dropbtn">
+        <div class="suspenso">
+          <button class="botao">
             CURSOS
             <i class="fa fa-caret-down"></i>
           </button>
-          <div class="dropdown-content">
+          <div class="suspenso-conteudo">
             <a href="./courses/ads.html"
               >Análise e Desenvolvimento de Sistemas</a
             >
@@ -50,11 +50,10 @@
     </header>
 
     <br />
-    <!-- 
-    <h1>Sobre</h1> -->
+
+    <!-- <h1>Sobre</h1> -->
 
     <div id="texto"></div>
-
     <br />
 
     <footer>
