feat: :construction: Inserção da semana 11 na página de menu

--- a/menu/index.html
+++ b/menu/index.html
@@ -62,6 +62,11 @@
         href="../dwba4-semana-10-PT3025616/index.html"
         >Semana 10</a
       >
+      <a
+        class="grid-item noselect"
+        href="../dwba4-semana-11-PT3025616/index.html"
+        >Semana 11</a
+      >
     </div>
     <script src="./script.js" defer></script>
   </body>
